--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,11 @@
     "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "cypress",
+    "__mocks__",
+    "/email-server",
+    "cypress.config.ts"
+  ]
 }
